--- a/ProyectoIntegrador/src/app/componentes/acercade/acercade.component.html
+++ b/ProyectoIntegrador/src/app/componentes/acercade/acercade.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/fotoperfil.jpeg" class="img-fluid" id="fotoperfil">
+        <img src="../../../assets/fotoperfil.jpeg" class="img-fluid" alt="Responsive image" id="fotoperfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <p id="nombre"> Gutiérrez Monserrat</p>
