--- a/ProyectoIntegrador/src/app/componentes/header/header.component.scss
+++ b/ProyectoIntegrador/src/app/componentes/header/header.component.scss
@@ -1,7 +1,9 @@
 div {
     background-color: #5c7cf3;
+    width: 100%;
 }
 app-redes{
     float: right;
-    margin-top: 20 px;
+    margin-top: 2%;
+    margin-right: 20px;
 }
