--- a/ProyectoIntegrador/src/app/componentes/acercade/acercade.component.scss
+++ b/ProyectoIntegrador/src/app/componentes/acercade/acercade.component.scss
@@ -3,22 +3,33 @@
 }
 div {
     background-color: #5c7cf3;
-    text-align: left;
+    text-align: center;
 }
 /*nombre*/
 #nombre{
     font-weight: bold;
-    margin-left: 10px;
+    margin-left: 20%;
 }
 /*foto de perfil*/
 @media (min-width:576px){
     #fotoperfil{
         position: absolute;
         width: 15%;
-        border-radius: 100%;
+        border-radius: 90%;
         box-shadow: 3px 3px 3px grey;
-    }
+        left: 20px;
+        top: 300px;
+    }}
+@media (max-width:575px){
+        #fotoperfil{
+            position: absolute;
+            width: 15%;
+            border-radius: 100%;
+            box-shadow: 3px 3px 3px grey;
+            left: 33%;
+            top: 300px;
+        }
 }
 #fotoperfil{
-    width: 200px;
+    width: 150px;
 }
