--- a/ProyectoIntegrador/src/app/componentes/acercade/acercade.component.html
+++ b/ProyectoIntegrador/src/app/componentes/acercade/acercade.component.html
@@ -1,12 +1,12 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
         <img src="../../../assets/fotoperfil.jpeg" class="img-fluid" alt="Responsive image" id="fotoperfil">
     </div>
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
         <p id="nombre"> Gutiérrez Monserrat</p>
-        <p>Full Stack Developer Jr</p>        
+        <p id="titulo"> Full Stack Developer Jr </p>        
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
         <span>
             <h1>Acerca de mí..</h1>
             <p>Estudiante de la Tecnicaura en Ciencias de Datos e Inteligencia Artificial.</p>
