--- a/ProyectoIntegrador/src/app/componentes/educacion/educacion.component.html
+++ b/ProyectoIntegrador/src/app/componentes/educacion/educacion.component.html
@@ -1,1 +1,14 @@
-<p>educacion works!</p>
+<div class="row">
+    <h1>Formacion Profesional</h1>
+    <div class="col-lg-11">
+        <ul>
+            <li>
+            <h1>Estudio </h1>
+            <h3>(years)</h3>
+            </li>
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum placeat facere facilis voluptatem? Doloribus quia maiores reiciendis temporibus ratione provident amet sunt esse quaerat nobis? Commodi quos similique optio ipsa?</p>
+        </ul>
+    </div>
+
+</div>
+
