--- a/ProyectoIntegrador/src/app/app.component.html
+++ b/ProyectoIntegrador/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
 <app-acercade></app-acercade>
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
+<app-hys></app-hys>
+<app-footer></app-footer>
