--- a/ProyectoIntegrador/src/app/componentes/experiencia/experiencia.component.html
+++ b/ProyectoIntegrador/src/app/componentes/experiencia/experiencia.component.html
@@ -1,1 +1,13 @@
-<p>experiencia works!</p>
+<div class="row">
+    <h1>Experiencia Laboral</h1>
+    <div class="col-lg-11">
+        <ul>
+            <li>
+            <h1>Trabajo 1 </h1>
+            <h3>(years)</h3>
+            </li>
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum placeat facere facilis voluptatem? Doloribus quia maiores reiciendis temporibus ratione provident amet sunt esse quaerat nobis? Commodi quos similique optio ipsa?</p>
+        </ul>
+    </div>
+
+</div>
