--- a/ProyectoIntegrador/src/app/componentes/header/header.component.scss
+++ b/ProyectoIntegrador/src/app/componentes/header/header.component.scss
@@ -1,9 +1,5 @@
 div {
     background-color: #5c7cf3;
     width: 100%;
-}
-app-redes{
-    float: right;
-    margin-top: 2%;
-    margin-right: 20px;
+    box-shadow: 5px 5px 10px #5c7cf3;
 }
