--- a/ProyectoIntegrador/src/app/componentes/logo-ap/logo-ap.component.html
+++ b/ProyectoIntegrador/src/app/componentes/logo-ap/logo-ap.component.html
@@ -1,1 +1,17 @@
-<img src="../../../assets/APLogo.png" id="logoAp">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/APLogo.png" id="logoAp" alt="Argentina Programa">
+        </div>
+        <div class="redes">
+                <a href="https://github.com/monsegutier"> <img src="../../../assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/"> <img src="../../../assets/linkedin.png" alt=""></a>
+                <a href="https://www.facebook.com/"> <img src="../../../assets/facebook.png" alt=""></a>
+                <a href="https://www.instagram.com/"> <img src="../../../assets/instagram.png" alt=""></a>
+                <a href="https://twitter.com/"> <img src="../../../assets/twitter.png" alt=""></a>
+                <button type="button" class="btn btn-primary">Ingreso</button>
+        </div>
+        
+    </div>
+</div>
+
