--- a/ProyectoIntegrador/src/app/componentes/logo-ap/logo-ap.component.scss
+++ b/ProyectoIntegrador/src/app/componentes/logo-ap/logo-ap.component.scss
@@ -1,3 +1,22 @@
+.container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 1em;
+}
 #logoAp{
-    width: 150px;
+  margin-left: 1em;
+    width: 150px;}
+img { width: 40px;}
+/*para telefonos*/
+@media(max-width: 575px){
+  .container{
+  flex-direction: column;
+  }
+  .redes{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  .redes img{margin: 0.5em;}
 }
