--- a/Front End/src/app/componentes/hys/hys.component.html
+++ b/Front End/src/app/componentes/hys/hys.component.html
@@ -10,8 +10,8 @@
         [outerStrokeColor]="'violet'"
         [innerStrokeColor]="'pink'"
         [animation]="true"
-        [animationDuration]="1000"
-    ></circle-progress>  
+        [animationDuration]="1000" >
+    </circle-progress>  
         </div>
         <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
