--- a/Front End/src/app/componentes/home/home.component.html
+++ b/Front End/src/app/componentes/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<app-header></app-header>
+<app-acercade></app-acercade>
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
+<app-hys></app-hys>
+<app-footer></app-footer>
