--- a/Front End/src/app/componentes/acercade/acercade.component.html
+++ b/Front End/src/app/componentes/acercade/acercade.component.html
@@ -9,7 +9,7 @@
     <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
         <span>
             <h1>Acerca de mí..</h1>
-            <p>Estudiante de la Tecnicaura en Ciencias de Datos e Inteligencia Artificial.</p>
+            <p>Estudiante de la Tecnicatura en Ciencias de Datos e Inteligencia Artificial.</p>
             <p>Actualmente vivo en Rosario, Santa Fe</p>
         </span>
     </div>
