--- a/Front End/src/app/componentes/login/login.component.html
+++ b/Front End/src/app/componentes/login/login.component.html
@@ -8,7 +8,7 @@
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form>
           <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-            <p class="lead fw-normal mb-0 me-3">Inicia sesión</p>
+            <p class="lead fw-normal mb-0 me-3">Iniciar sesión</p>
           </div>
 
           <div class="divider d-flex align-items-center my-4">
@@ -17,15 +17,15 @@
           <!-- Email input -->
           <div class="form-outline mb-4">
             <input type="email" id="form3Example3" class="form-control form-control-lg"
-              placeholder="Enter a valid email address" />
-            <label class="form-label" for="form3Example3">Email address</label>
+               />
+            <label class="form-label" for="form3Example3">Correo Electronico</label>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-3">
             <input type="password" id="form3Example4" class="form-control form-control-lg"
-              placeholder="Enter password" />
-            <label class="form-label" for="form3Example4">Password</label>
+               />
+            <label class="form-label" for="form3Example4">contraseña</label>
           </div>
 
           <div class="d-flex justify-content-between align-items-center">
@@ -33,17 +33,17 @@
             <div class="form-check mb-0">
               <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
               <label class="form-check-label" for="form2Example3">
-                Remember me
+                Recuerdame
               </label>
             </div>
-            <a href="#!" class="text-body">Forgot password?</a>
+            <a href="#!" class="text-body">Olvidaste tu contraseña?</a>
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2">
             <button type="button" class="btn btn-primary btn-lg"
               style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-            <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
-                class="link-danger">Register</a></p>
+            <p class="small fw-bold mt-2 pt-1 mb-0">¿No tienes una cuenta?<a href="#!"
+                class="link-danger">Registrarse</a></p>
           </div>
 
         </form>
@@ -54,7 +54,7 @@
     class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
     <!-- Copyright -->
     <div class="text-white mb-3 mb-md-0">
-      Copyright © 2020. All rights reserved.
+      Copyright © 2022. All rights reserved.
     </div>
     <!-- Copyright -->
 
