--- a/Front End/src/app/componentes/logo-ap/logo-ap.component.html
+++ b/Front End/src/app/componentes/logo-ap/logo-ap.component.html
@@ -9,7 +9,8 @@
                 <a href="https://www.facebook.com/"> <img src="../../../assets/facebook.png" alt=""></a>
                 <a href="https://www.instagram.com/"> <img src="../../../assets/instagram.png" alt=""></a>
                 <a href="https://twitter.com/"> <img src="../../../assets/twitter.png" alt=""></a>
-                <button type="button" class="btn btn-primary" (click)="login">Ingreso</button>
+                <button type="button" class="btn btn-primary" (click)="login()" *ngIf="!isLogged">Ingreso</button>
+                <button type="button" class="btn btn-primary" (click)="onLogOut()" *ngIf="!isLogged">Salir</button>
         </div>
         
     </div>
