--- a/Front End/src/app/componentes/acercade/acercade.component.html
+++ b/Front End/src/app/componentes/acercade/acercade.component.html
@@ -3,7 +3,7 @@
         <img src="../../../assets/fotoperfil.jpeg" class="img-fluid" alt="Responsive image" id="fotoperfil">
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-        <p id="nombre">{{persona.nombre}} {{persona.apellido} Gutierrez Monserrat}</p>
+        <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
         <p id="titulo"> Full Stack Developer Jr </p>        
     </div>
     <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
