--- a/Front End/src/app/componentes/login/login.component.html
+++ b/Front End/src/app/componentes/login/login.component.html
@@ -1,72 +1,39 @@
-<section class="vh-100">
-  <div class="container-fluid h-custom">
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-md-9 col-lg-6 col-xl-5">
-        <img src="../../../assets/login.png"
-          class="img-fluid" alt="Sample image">
-       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
-          <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-            <p class="lead fw-normal mb-0 me-3">Ingresar Usuario y Clave</p>
-          </div>
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
 
-          <!-- Email input -->
-          <div class="form-outline mb-4">
-            <input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg" [(ngmodel)] = "nombreUsuario" required />
-            <label class="form-label" for="form3Example3">Correo Electronico</label>
-          </div>
+            <div class="mb-md-5 mt-md-4 pb-5">
 
-          <!-- Password input -->
-          <div class="form-outline mb-3">
-            <input type="password" id="password" class="form-control form-control-lg" [(ngmodel)] = "nombreUsuario" required />
-            <label class="form-label" for="form3Example4">contraseña</label>
-          </div>
+              <h2 class="fw-bold mb-2 text-uppercase">Iniciar Sesión</h2>
+             
 
-          <div class="d-flex justify-content-between align-items-center">
-            <!-- Checkbox -->
-            <div class="form-check mb-0">
-              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-              <label class="form-check-label" for="form2Example3">
-                Recuerdame
-              </label>
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                <label class="form-label" for="typeEmailX">Usuario</label>
+              </div>
+
+              <div class="form-outline form-white mb-4">
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                <label class="form-label" for="typePasswordX">Contraseña</label>
+              </div>
+
+              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Olvidaste tu contraseña</a></p>
+
+              <button class="btn btn-outline-light btn-lg px-5" type="submit">Ingresar</button>
+
+
+            <div>
+              <p class="mb-0">No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Registrarse</a>
+              </p>
             </div>
-            <a href="#!" class="text-body">Olvidaste tu contraseña?</a>
-          </div>
 
-          <div class="text-center text-lg-start mt-4 pt-2">
-            <button type="button" class="btn btn-primary btn-lg"
-              style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-            <p class="small fw-bold mt-2 pt-1 mb-0">¿No tienes una cuenta?<a href="#!"
-                class="link-danger">Registrarse</a></p>
           </div>
-
-        </form>
+        </div>
       </div>
     </div>
   </div>
-  <div
-    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
-    <!-- Copyright -->
-    <div class="text-white mb-3 mb-md-0">
-      Copyright © 2022. All rights reserved.
-    </div>
-    <!-- Copyright -->
-
-    <!-- Right -->
-    <div>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="#!" class="text-white">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-    </div>
-    <!-- Right -->
-  </div>
+</div>
 </section>
