--- a/Front End/src/app/componentes/login/login.component.scss
+++ b/Front End/src/app/componentes/login/login.component.scss
@@ -1,15 +1,10 @@
-.divider:after,
-.divider:before {
-content: "";
-flex: 1;
-height: 1px;
-background: #eee;
-}
-.h-custom {
-height: calc(100% - 73px);
-}
-@media (max-width: 450px) {
-.h-custom {
-height: 100%;
-}
-}
+.gradient-custom {
+    /* fallback for old browsers */
+    background:  #5c7cf3;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, #6170f3(106, 17, 203, 1), rgb(68, 130, 238));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, #6170f3(106, 17, 203, 1), rgb(68, 130, 238))
+    }
